# AirfoilEditor

./: .gitignore  AirfoilEditor.py  AirfoilEditor.settings  AirfoilEditor_sav.py  AirfoilEditor_test_async.py  AirfoilPolars.py  AirfoilPolars.settings  CHANGELOG.md  LICENSE  README.md  README4.md  airfoileditor.py  build_release.bat  pip_installs.txt  pyproject.toml
airfoileditor/: CHANGELOG.md  __init__.py  __main__.py  ae_app_model.py  ae_app_modes.py  ae_artists.py  ae_diagrams.py  ae_dialogs.py  ae_panels.py  ae_widgets.py  airfoil_diagrams.py  airfoil_dialogs.py  airfoil_panels.py  app.py  app_model.py  app_modes.py  app_new.py  erkenntnisse matcher.txt  match_runner.py  resources.py  xo2_artists.py  xo2_diagrams.py  xo2_dialogs.py  xo2_panels.py
airfoileditor/base/: app_utils.py  artist.py  common_utils.py  diagram.py  dxf_artist.py  math_util.py  panels.py  spline.py  widgets.py
airfoileditor/model/: airfoil.py  airfoil_examples.py  airfoil_exports.py  airfoil_geometry.py  case.py  geometry.py  geometry_bezier.py  geometry_bspline.py  geometry_curve.py  geometry_hicks_henne.py  geometry_spline.py  polar_set.py  xo2_controller.py  xo2_driver.py  xo2_input.py  xo2_results.py
airfoileditor/ui/: ae_artists.py  ae_diagrams.py  ae_dialogs.py  ae_panels.py  ae_widgets.py  util_dialogs.py  xo2_artists.py  xo2_diagrams.py  xo2_dialogs.py  xo2_panels.py
dev/: AirfoilEditor_video.pptx  PyPI_how_to.docx  UI_Drafts.pptx  build_release.bat  build_win_exe.bat  clean_examples.bat  package_build.bat  package_to_PyPI.bat  win_build.py  win_build_exe.bat  win_build_exe_dist.bat  win_build_installer.bat  win_build_starter.bat  win_exe_build.bat  win_installer.nsi  win_starter.f90
doc/: README_PyPi.md  Readme Version 4.docx  how_to_release.md
examples_optimize/F3B_bezier/: F3B_bezier.bez  F3B_bezier.xo2  Readme.txt  make.bat  make.sh
examples_optimize/F3F_hicks_henne/: F3F_hicks_henne.hicks  F3F_hicks_henne.xo2  Readme.txt  make.bat  make.sh  stop.bat
examples_optimize/JX-GP_bezier/: JX-GP_bezier.bez  JX-GP_bezier.inp  JX-GP_bezier_mod_Design_0.bez  Readme.txt  make.bat  make.sh
examples_optimize/JX-GP_hicks/: JX-GP_hicks.hicks  JX-GP_hicks.inp  Readme.txt  make.bat  make.sh
examples_optimize/SD7003_camb_thick/: Readme.txt  SD 7003_test.bez  SD7003_cdmin.inp  SD7003_mod.bez  make.bat  make.sh
examples_optimize/SD7003_fast/: Readme.txt  SD7003_fast.xo2  make.bat  make.sh
examples_optimize/Worker_demo/: Readme.txt  worker.inp
modules/: AE_ico.pdn  __init__.py  airfoil.py  airfoil_artists.py  airfoil_diagrams.py  airfoil_dialogs.py  airfoil_panels.py  airfoil_test.py  airfoil_ui_panels.py  airfoil_widgets.py  app.py  app.settings  app_utils.py  artist.py  common_utils.py  match_bezier.py  test-multi-thread.py  ui_base.py  widgets.py  xo2_artists.py  xo2_dialogs.py  xo2_panels.py
modules/base/: __init__.py  app_utils.py  artist.py  common_utils.py  diagram.py  math_util.py  panels.py  spline.py  spline_test.py  widgets.py
modules/model/: airfoil.py  airfoil_examples.py  airfoil_geometry.py  case.py  math_util.py  polar_set.py  polar_set_test_async.py  spline.py  xo2_controller.py  xo2_driver.py  xo2_driver_test_async.py  xo2_input.py  xo2_results.py
modules/ui/: artist.py  diagram.py  panels.py  widgets.py
test_airfoils/: BC70_bezier_mod.bez  match-foil-Rearload-bezier.bez  ï»¿RL1PY1-bezier.bez
tests/: __init__.py  airfoil_test.py  conftest.py  test_airfoil.py  test_airfoil_export.py  test_bezier.py  test_bspline.py  test_case_direct_design.py  test_case_match_target.py  test_constraints_model.py  test_dxf_artist.py  test_geometry_angles.py  test_match_airfoil.py  test_spline.py
