# see PyPI_how_to.docx

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "airfoileditor"
dynamic = ["version"]               
authors = [
  { name="Jochen Guenzel", email="jochen@jxjo.de" },
]
description = "View, Modify, Optimize Airfoils"
readme = "doc/README_PyPi.md"
requires-python = ">=3.12"
dependencies = [
  "numpy~=2.2.0",
  "packaging>=24.0",
  "requests",
  "pyqt6>=6.9.1",
  "pyqtgraph>=0.13.7",
  "f90nml>=1.4.4",
  "termcolor>=2.3.0",
  "platformdirs>=4.3.0"
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: End Users/Desktop"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jxjo/AirfoilEditor"
Issues = "https://github.com/jxjo/AirfoilEditor/issues"

[project.gui-scripts]
airfoileditor = "airfoileditor.app:start"

[tool.hatch.version]
path = "modules/app.py"

[tool.hatch.build.targets.wheel]
packages = ["airfoileditor"]
only-include = [
  "modules", 
  "assets",
  "examples_optimize"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "doc",
]
include = [
  "airfoileditor",
  "examples/optimize",
  "assets",
  "README.md",
  "LICENSE"
]

[tool.hatch.build.targets.wheel.sources]
"examples/optimize" = "airfoileditor/examples/optimize"
"assets" = "airfoileditor/assets"
